--- a/index.html
+++ b/index.html
@@ -1,216 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
 <title>
-Amazon
+Aaditya Kumar
 </title>
+
+<style>
+h1{
+text-align:centre;
+color:blue;
+}
+</style>
+
+
+
 </head>
-
 <body>
-	<header>
-		<div class="navbar">
-			<div class="nav-logo border">
-				<div class="logo"></div>
-			</div>
-
-			<div class="nav-address border">
-				<p class="add-first">Deliver to</p>
-				<div class="add-icon">
-					🌍
-					<p class="add-second">India</p>
-				</div>
-			</div>
-
-			<div class="nav-search">
-				<select class="search-select">
-					<option>All</option>
-				</select>
-				<input placeholder="Search amazon" class="search-input">
-				<div class="search-icon">
-					☼
-				</div>
-			</div>
-
-			<div class="nav-signin border">
-				<p><span>Hello, sign in</span></p>
-				<p class="nav-second">Account & Lists</p>
-			</div>
-
-			<div class="nav-return border">
-				<p><span>Returns</span></p>
-				<p class="nav-second">& Orders</p>
-			</div>
-
-			<div class="nav-cart border">
-				<i class="shoping-icon">🛒</i>
-				Cart
-			</div>
-
-		</div>
-
-
-		<div class="panel">
-			<div class="panel-all">
-				≡
-				All
-			</div>
-
-			<div class="panel-ops">
-				<p class="border">Today's Deals</p>
-				<p class="border">Customer Service</p>
-				<p class="border">Registry</p>
-				<p class="border">Gift Cards</p>
-				<p class="border">Sell</p>
-			</div>
-
-			<div class="panel-deals border">
-				Shop Deals in Electronics
-			</div>
-		</div>
-	</header>
-
-	<div class="hero-section">
-		<div class="hero-msg">
-			<p>You are on amazon.com. You can also shop Amazon India for millions of products withfast local delivery. <a>Click here to go to amazon.in</a> </p>
-		</div>
-	</div>
-
-	<div class="shop-section">
-
-		<div class="box1 box">
-			<div class="box-content">
-				<h2>Computer & Laptop</h2>
-				<div class="box-img" style="background-image: url('img/shop/box1.png');"></div>
-				<p>See more</p>
-			</div>
-		</div>
-
-		<div class="box2 box">
-			<div class="box-content">
-				<h2>Mobile & Smart Phones</h2>
-				<div class="box-img" style="background-image: url('img/shop/box2.jpeg');"></div>
-				<p>See more</p>
-			</div>
-
-		</div>
-
-		<div class="box3 box">
-			<div class="box-content">
-				<h2>Hacker Clothes</h2>
-				<div class="box-img" style="background-image: url('img/shop/box3.png');"></div>
-				<p>See more</p>
-			</div>
-		</div>
-
-		<div class="box4 box">
-			<div class="box-content">
-				<h2>Hacker Gadgets</h2>
-				<div class="box-img" style="background-image: url('img/shop/box4.png');"></div>
-				<p>See more</p>
-			</div>
-		</div>
-
-		<div class="box1 box">
-			<div class="box-content">
-				<h2>Golden Coins</h2>
-				<div class="box-img" style="background-image: url('img/shop/box5.png');"></div>
-				<p>See more</p>
-			</div>
-		</div>
-
-		<div class="box2 box">
-			<div class="box-content">
-				<h2>Glass & Jar</h2>
-				<div class="box-img" style="background-image: url('img/shop/box6.png');"></div>
-				<p>See more</p>
-			</div>
-
-		</div>
-
-		<div class="box3 box">
-			<div class="box-content">
-				<h2>Golden Crown</h2>
-				<div class="box-img" style="background-image: url('img/shop/box7.png');"></div>
-				<p>See more</p>
-			</div>
-		</div>
-
-		<div class="box4 box">
-			<div class="box-content">
-				<h2>Icecream & Cup Cakes</h2>
-				<div class="box-img" style="background-image: url('img/shop/box8.png');"></div>
-				<p>See more</p>
-			</div>
-		</div>
-		
-	</div>
-
-	<footer>
-		<div class="foot-panel1">
-			<p class="border">Back to top</p>
-		</div>
-
-	<div class="foot-panel2">
-		<ul>
-			<p>Get to know Us</p>
-			<a class="border">Careers</a>
-			<a class="border">Blog</a>
-			<a class="border">About Amazon</a>
-			<a class="border">Investors Relations</a>
-			<a class="border">Amazon Devices</a>
-			<a class="border">Amazon Science</a>
-		</ul>
-		<ul>
-			<p>Get to know Us</p>
-			<a class="border">Careers</a>
-			<a class="border">Blog</a>
-			<a class="border">About Amazon</a>
-			<a class="border">Investors Relations</a>
-			<a class="border">Amazon Devices</a>
-			<a class="border">Amazon Science</a>
-		</ul>
-		<ul>
-			<p>Get to know Us</p>
-			<a class="border">Careers</a>
-			<a class="border">Blog</a>
-			<a class="border">About Amazon</a>
-			<a class="border">Investors Relations</a>
-			<a class="border">Amazon Devices</a>
-			<a class="border">Amazon Science</a>
-		</ul>
-		<ul>
-			<p>Get to know Us</p>
-			<a class="border">Careers</a>
-			<a class="border">Blog</a>
-			<a class="border">About Amazon</a>
-			<a class="border">Investors Relations</a>
-			<a class="border">Amazon Devices</a>
-			<a class="border">Amazon Science</a>
-		</ul>
-		
-	</div>
-
-	<div class="foot-panel3">
-		<div class="logo border">
-			
-		</div>
-	</div>
-
-	<div class="foot-panel4">
-		<div class="pages">
-			<a>Conditions of Use</a>
-			<a>Privacy Notice</a>
-			<a>Your Ads Privacy Choices</a>
-		</div>
-
-		<div class="copyright">
-			© 1996-2023, Amazon.com, Inc. or its affiliates
-		</div>
-	</div>
-
-	</footer>
+<h1>Coming Soon Your Economics Notes</h1>
 </body>
 </html>
