--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
 </head>
   <style>
     body{
-      background:#000;
+      background:#ccc;
       box-sizing:border-box;
       margin:0;
       padding:0;
     }
     h1{
-      color:#fff;
+      color:#000;
       text-align:center;
     }
     p{
       font-size:3rem;
       text-align:center;
+      color:#000;
     }
   </style>
 <body>
