--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         </div>
         <div class="footer-box fourth-footer">
             <h4 class="footer-text footer-contact">Social Links</h4>
-            <a href="https://www.instagram.com/coder/aaditya/?utm_source=qr&igsh=ZXFyYTI5ZzMTdz" class="orange-color border-animation"><img src="image/ig.png" alt="Instagram" class="footer-contact-ig"></a>
+            <a href="https://www.instagram.com/coder_aaditya?igsh=ZXFyYTI5ZzAzMTdz" class="orange-color border-animation"><img src="image/ig.png" alt="Instagram" class="footer-contact-ig"></a>
             <a href="#" class="orange-color border-animation"><img src="image/fb.png" alt="Instagram" class="footer-contact-img"></a>
 
         </div>
