--- a/third-semester.html
+++ b/third-semester.html
@@ -119,8 +119,8 @@
                 </div>
 
                 <div class="button-area">
-                    <button><a href="assets/notes/3rd semester/28-08-2024 Notes.pdf">View Notes</a></button>
-                    <button><a href="assets/notes/3rd semester/28-08-2024 Notes.pdf" download="28-08-2024 Notes">Download Notes</a></button>
+                    <button><a href="assets/notes/3rd semester/paper-3/28-08-2024.pdf">View Notes</a></button>
+                    <button><a href="assets/notes/3rd semester/paper-3/28-08-2024.pdf" download="28-08-2024 Notes">Download Notes</a></button>
                 </div>
 
             </div>
@@ -134,8 +134,8 @@
                 </div>
 
                 <div class="button-area">
-                    <button><a href="assets/notes/3rd semester/29-08-2024 Notes.pdf">View Notes</a></button>
-                    <button><a href="assets/notes/3rd semester/29-08-2024 Notes.pdf" download="29-08-2024 Notes">Download Notes</a></button>
+                    <button><a href="assets/notes/3rd semester/paper-4/29-08-2024.pdf">View Notes</a></button>
+                    <button><a href="assets/notes/3rd semester/paper-4/29-08-2024.pdf" download="29-08-2024 Notes">Download Notes</a></button>
                 </div>
 
             </div>
@@ -149,8 +149,8 @@
                 </div>
 
                 <div class="button-area">
-                    <button><a href="#">View Notes</a></button>
-                    <button><a href="#">Download Notes</a></button>
+                    <button><a href="assets/notes/3rd semester/paper-4/30-08-2024.pdf">View Notes</a></button>
+                    <button><a href="assets/notes/3rd semester/paper-4/30-08-2024.pdf">Download Notes</a></button>
                 </div>
 
             </div>
