--- a/third-semester.html
+++ b/third-semester.html
@@ -150,7 +150,7 @@
 
                 <div class="button-area">
                     <button><a href="assets/notes/3rd semester/paper-4/30-08-2024.pdf">View Notes</a></button>
-                    <button><a href="assets/notes/3rd semester/paper-4/30-08-2024.pdf" download="30-08-2024 Notes>Download Notes</a></button>
+                    <button><a href="assets/notes/3rd semester/paper-4/30-08-2024.pdf" download="30-08-2024 Notes">Download Notes</a></button>
                 </div>
 
             </div>
@@ -190,7 +190,7 @@
     
                     <div class="button-area">
                         <button><a href="assets/notes/3rd semester/paper-3/11-09-2024.pdf">View Notes</a></button>
-                        <button><a href="assets/notes/3rd semester/paper-3/11-09-2024.pdf" download="11-09-2024 Notes>Download Notes</a></button>
+                        <button><a href="assets/notes/3rd semester/paper-3/11-09-2024.pdf" download="11-09-2024 Notes">Download Notes</a></button>
                     </div>
     
                 </div>
