--- a/third-semester.html
+++ b/third-semester.html
@@ -235,8 +235,8 @@
                     </div>
     
                     <div class="button-area">
-                        <button><a href="href="assets/notes/3rd semester/paper-3/25-09-2024.pdf">View Notes</a></button>
-                        <button><a href="href="assets/notes/3rd semester/paper-3/25-09-2024.pdf" download="25-09-2024 Notes">Download Notes</a></button>
+                        <button><a href="assets/notes/3rd semester/paper-3/25-09-2024.pdf">View Notes</a></button>
+                        <button><a href="assets/notes/3rd semester/paper-3/25-09-2024.pdf" download="25-09-2024 Notes">Download Notes</a></button>
                     </div> 
 
                 </div>  
