--- a/third-semester.html
+++ b/third-semester.html
@@ -228,7 +228,7 @@
                   <!-- box 5 -->
                   <div class="third-semester-area">
     
-                    <div class="date-box"><p>25-09/2024</p></div>
+                    <div class="date-box"><p>25/09/2024</p></div>
     
                     <div class="notes-text">
                         <p>Economics 3rd Semester Notes</p>
