--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     </div>  
     
     <div class="copyright">
-        <audio src="audio/maa.mp3" id="audio" style="display:none;"></audio>
+        <audio src="audio/maa.mp3" id="audio" controls="controls" style="display:block";></audio>
         <p><i class="fa-solid fa-play" id="play" onclick="play()"></i> <i class="fa-solid fa-pause" id="pause" onclick="pause"></i> This website is made by <a href="#" class=" border-animation red-color" >Aaditya Kumar</a></p>
     </div>
     </footer>
