--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     
     <div class="copyright">
         <audio src="audio/Maa.mp3" id="audio" style="display:block";></audio>
-        <p><i class="fa-solid fa-play" id="play" onclick="play()"></i> <i class="fa-solid fa-pause" id="pause" onclick="pause"></i> This website is made by <a href="#" class=" border-animation red-color" >Aaditya Kumar</a></p>
+        <p><i class="fa-solid fa-play" id="play" onclick="play()"></i> This website is made by <a href="#" class=" border-animation red-color" >Aaditya Kumar</a><i class="fa-solid fa-pause" id="pause" onclick="pause()"></i></p>
     </div>
     </footer>
 
