--- a/first-semester.html
+++ b/first-semester.html
@@ -56,7 +56,7 @@
                     <li><a href="result.html" class="hover-link border-animation orange-color">Results</a></li>
                     <li><a href="about.html" class="hover-link border-animation orange-color secondary-button">About</a></li>
                     <li><a href="contact.html" class="hover-link border-animation orange-color primary-button">Contact</a></li>
-                    <li><a href="#" class="hover-link border-animation orange-color primary-button">App</a></li>
+                    <li><a href="assets/app/aaditya_app.apk" download="aaditya_app" class="hover-link border-animation orange-color primary-button">App</a></li>
                     <li><a href="quiz.html" class="hover-link border-animation orange-color quiz-menu">Quiz</a></li>
                 </ul>
             </div>
