--- a/third-semester.html
+++ b/third-semester.html
@@ -303,8 +303,8 @@
                 </div>
 
                 <div class="button-area">
-                    <button><a href="assets/notes/3rd semester/paper-4/30-08-2024.pdf">View Notes</a></button>
-                    <button><a href="assets/notes/3rd semester/paper-4/30-08-2024.pdf" download="30-08-2024 Notes">Download Notes</a></button>
+                    <button><a href="assets/notes/3rd semester/paper-3/01 Nov to 30 Nov All Notes.pdf">View Notes</a></button>
+                    <button><a href="assets/notes/3rd semester/paper-3/01 Nov to 30 Nov All Notes.pdf" download="01 Nov to 30 Nov Economics All Notes">Download Notes</a></button>
                 </div>
 
             </div>
