--- a/third-semester.html
+++ b/third-semester.html
@@ -331,7 +331,7 @@
 
                 <div class="button-area">
                     <button><a href="assets/notes/3rd semester/paper-3/06-12-2024.pdf">View Notes</a></button>
-                    <button><a href="assets/notes/3rd semester/paper-3/06-12-2024.pdf" download="06-12-2024 Notes">Download</a></button>
+                    <button><a href="assets/notes/3rd semester/paper-3/06-12-2024.pdf" download="06-12-2024 Notes">Download Notes</a></button>
                 </div>
 
             </div>
