--- a/third-semester.html
+++ b/third-semester.html
@@ -99,7 +99,9 @@
             <div class="month-box">
                 <h2><a href="#january-container">January 2025</a></h2>
             </div>
-            
+            <div class="month-box">
+                <h2><a href="risk management.html">Risk Management</a></h2>
+            </div>
 
 
             
