--- a/risk management.html
+++ b/risk management.html
@@ -119,10 +119,10 @@
                     <p>Risk Management 3rd Sem Notes </p>
                 </div>
 
-                <div class="button-area">
+                <!-- <div class="button-area">
                     <button><a href="assets/notes/3rd semester/paper-3/28-08-2024.pdf">View Notes</a></button>
                     <button><a href="assets/notes/3rd semester/paper-3/28-08-2024.pdf" download="28-08-2024 Notes">Download Notes</a></button>
-                </div>
+                </div> -->
 
             </div>
             <!-- box-2 -->
