--- a/quiz.html
+++ b/quiz.html
@@ -227,6 +227,11 @@
                 </div>    
             </div>  
 
+            <div style="width: 100%; height: 50px; background-color: rgb(255, 255, 255); text-align: center; display: flex; align-items: center; justify-content: center;" >
+             <div class="show-all-box">
+                <a href="quiz.html"><button  style="cursor: pointer;" href="#" class="button">Start Quiz</button></a> 
+           </div>   
+            </div>
             
 
     </section>
