--- a/quiz.html
+++ b/quiz.html
@@ -229,7 +229,7 @@
 
             <div style="width: 100%; height: 50px; background-color: rgb(255, 255, 255); text-align: center; display: flex; align-items: center; justify-content: center;" >
              <div class="show-all-box">
-                <a href="quiz.html"><button  style="cursor: pointer;" href="https://coder-aaditya.github.io/Quiz/" class="button">Start Quiz</button></a> 
+                <a href="quiz.html"><button  style="cursor: pointer;" href="https://coder-aaditya.github.io/Quiz" class="button">Start Quiz</button></a> 
            </div>   
             </div>
             
