--- a/quiz.html
+++ b/quiz.html
@@ -229,7 +229,7 @@
 
             <div style="width: 100%; height: 50px; background-color: rgb(255, 255, 255); text-align: center; display: flex; align-items: center; justify-content: center;" >
              <div class="show-all-box">
-                <a href="https://coder-aaditya.github.io/Quiz/" target="_blank"><button style="cursor: pointer;" class="button">Start Quiz</button></a> 
+                <button style="cursor: pointer;" class="button"><a href="https://coder-aaditya.github.io/Quiz/" target="_blank">Start Quiz</a> </button>
            </div>   
             </div>
             
