--- a/quiz.html
+++ b/quiz.html
@@ -228,9 +228,7 @@
             </div>  
 
             <div style="width: 100%; height: 50px; background-color: rgb(255, 255, 255); text-align: center; display: flex; align-items: center; justify-content: center;" >
-             <div class="show-all-box">
-                <button style="cursor: pointer;" class="button"><a href="https://coder-aaditya.github.io/Quiz/" target="_blank">Start Quiz</a> </button>
-           </div>   
+             <a href="https://coder-aaditya.github.io/Quiz/">Start Quiz</a>   
             </div>
             
 
