--- a/quiz.html
+++ b/quiz.html
@@ -228,7 +228,9 @@
             </div>  
 
             <div style="width: 100%; height: 50px; background-color: rgb(255, 255, 255); text-align: center; display: flex; align-items: center; justify-content: center;" >
-             <a href="https://coder-aaditya.github.io/Quiz/">Start Quiz</a>   
+             <div class="show-all-box">
+                <h1 style="cursor: pointer;" class="button"><a href="https://coder-aaditya.github.io/Quiz/" target="_blank">Start Quiz</a></h1>
+           </div> 
             </div>
             
 
