--- a/quiz.html
+++ b/quiz.html
@@ -11,6 +11,64 @@
     <link rel="stylesheet" href="css/first-semester.css">
     <link rel="stylesheet" href="css/third-semester.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <style>
+        /* Keyframes for Rapid Bass Pulse Effect */
+        @keyframes bassPulse {
+            0% {
+                transform: scale(1);
+                box-shadow: 0 0 15px #ff0000, 0 0 25px #ff0000, 0 0 40px #ff0000;
+            }
+            50% {
+                transform: scale(1.4);
+                box-shadow: 0 0 30px #ff0000, 0 0 50px #ff0000, 0 0 80px #ff0000;
+            }
+            100% {
+                transform: scale(1);
+                box-shadow: 0 0 15px #ff0000, 0 0 25px #ff0000, 0 0 40px #ff0000;
+            }
+        }
+
+        /* Main Button Styling */
+        .bass-button {
+            display: inline-block;
+            padding: 22px 70px;
+            font-size: 26px;
+            font-weight: bold;
+            color: white;
+            text-transform: uppercase;
+            text-decoration: none;
+            border-radius: 50px;
+            cursor: pointer;
+            background: linear-gradient(45deg, #ff0044, #ffcc00, #00cc99, #0099ff);
+            background-size: 400% 400%;
+            animation: bassPulse 0.3s ease-in-out infinite, gradientShift 5s ease infinite;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.3), 0 0 25px rgba(255, 255, 255, 0.5);
+            text-shadow: 0 0 15px #fff, 0 0 30px #fff;
+        }
+
+        /* Hover Effect */
+        .bass-button:hover {
+            animation: bassPulse 0.2s ease-in-out infinite; /* Fastest pulse on hover */
+            transform: scale(1.3);
+            box-shadow: 0 0 40px #ff0000, 0 0 60px #ff0000, 0 0 100px #ff0000;
+        }
+
+        /* Gradient Animation */
+        @keyframes gradientShift {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+    </style>
+
 </head>
 <body>
     
@@ -227,10 +285,8 @@
                 </div>    
             </div>  
 
-            <div style="width: 100%; height: 50px; background-color: rgb(255, 255, 255); text-align: center; display: flex; align-items: center; justify-content: center;" >
-             <div class="show-all-box">
-                <a href="quiz.html"><button  style="cursor: pointer;" href="https://coder-aaditya.github.io/Quiz/" class="button">Start Quiz</button></a> 
-           </div>   
+            <div style="width: 100%; height: 200px; background:linear-gradient(45deg, #ff0080, #ff00ff, #00ffff, #00ff00);text-align: center; display: flex; align-items: center; justify-content: center;" >
+                <a href="https://coder-aaditya.github.io/Quiz/" class="bass-button">Start Quiz</a>
             </div>
             
 
