--- a/index.html
+++ b/index.html
@@ -159,16 +159,16 @@
                 <h2 class="notice-heading"><a href="result.html" style="text-decoration: none; color: white;">10 Highest Result</a></h2>
                 
                  <ul class="ten-result " style="opacity: 30%;">
-                    <li><i>Coming Soon</i>(2nd Semester Result)</li>
-                    <li><i>Coming Soon</i>(2nd Semester Result)</li>
-                    <li><i>Coming Soon</i>(2nd Semester Result)</li>
-                    <li><i>Coming Soon</i>(2nd Semester Result)</li>
-                    <li><i>Coming Soon</i>(2nd Semester Result)</li>
-                    <li><i>Coming Soon</i>(2nd Semester Result)</li>
-                    <li><i>Coming Soon</i>(2nd Semester Result)</li>
-                    <li><i>Coming Soon</i>(2nd Semester Result)</li>
-                    <li><i>Coming Soon</i>(2nd Semester Result)</li>
-                    <li><i>Coming Soon</i>(2nd Semester Result)</li>                                   
+                    <li><i>PUSHPA KUMARI</i>total 436 marks (2nd Sem)</li>
+                    <li><i>NITYA KUMARI </i>total 434 marks (2nd Sem)</li>
+                    <li><i>SONU KUMAR</i>total 431 marks (2nd Sem)</li>
+                    <li><i>AADITYA KUMAR</i>total 434 marks (2nd Sem)</li>
+                    <li><i>RIDHI KUMARI </i>total 428 marks (2nd Sem)</li>
+                    <li><i>MANISHA KUMARI</i>total 425 marks (2nd Sem)</li>
+                    <li><i>AASHU RANJAN</i>total 424 marks (2nd Sem)</li>
+                    <li><i>VINITA KUMARI</i>total 423 marks (2nd Sem)</li>
+                    <li><i>KUMAN KUMARI</i>total 422 marks (2nd Sem)</li>
+                    <li><i>MUNNI KUMARI</i>total 422 marks (2nd Sem)</li>                                   
                 </ul>               
             </div>
         </div>                  
