--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="notice">
                 <h2 class="notice-heading"><a href="result.html" style="text-decoration: none; color: white;">10 Highest Result</a></h2>
                 
-                 <ul class="ten-result " style="opacity: 30%;">
+                 <ul class="ten-result">
                     <li><i>PUSHPA KUMARI</i>total 436 marks (2nd Sem)</li>
                     <li><i>NITYA KUMARI </i>total 434 marks (2nd Sem)</li>
                     <li><i>SONU KUMAR</i>total 431 marks (2nd Sem)</li>
