--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
                 <h2 class="notice-heading"><a href="notice.html" style="text-decoration: none; color: white;">Daily Notice Board</a></h2>
                 <marquee behavior="" direction="up" scrollamount="2">
                  <ul>
-                    <li class="notice-li"><i class="notice-i">class start:-</i>Economics 3rd semester session 2023-27 class started</li>
+                    
+
+                    <li class="notice-li"><i class="notice-i">Result Published:-</i>Economics 2nd semester, session 2023-27, result was published at 11/12/2024</li>
                     
                     <!-- <li class="notice-li"><i class="notice-i">class start:-</i>Economics 3rd semester session 2023-27 class started</li>
                      -->
