--- a/third-semester.html
+++ b/third-semester.html
@@ -337,6 +337,21 @@
                 </div>
 
             </div>
+
+            <div class="third-semester-area">
+
+                <div class="date-box"><p>19/12/2024</p></div>
+
+                <div class="notes-text">
+                    <p>Economics 3rd Semester Notes</p>
+                </div>
+
+                <div class="button-area">
+                    <button><a href="assets/notes/3rd semester/paper-3/19-12-2024.pdf">View Notes</a></button>
+                    <button><a href="assets/notes/3rd semester/paper-3/19-12-2024.pdf" download="19-12-2024 Notes">Download Notes</a></button>
+                </div>
+
+            </div>
             
 
         </div>
