--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	<br>
 	<div id="box">
 		<input type="text" name="password" id="pass" placeholder="Enter password" oninput="show()">
-		<a href="#" style="text-decoration: none;"><button id="btn">Website</button></a>
+		<a href="home.html" style="text-decoration: none;"><button id="btn">Website</button></a>
 	</div>
 	<h2>❤ Thank You ❤</h2>
 
