--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 </head>
 <body>
 	<h1>
-		इस वेबसाइट को अपडेट किया जा रहा है, जिसमे कुछ दिनों का समय लग सकता है| इस अपडेट को इसलिए किया जा रहा है क्योंकि छात्रों को और आसानी से क्लास नोट्स मिल सके, किसी प्रकार की कोंई परेशानी का सामना ना करना पड़े और इस अपडेट के बाद आपको अलग-अलग महीनो के अलग-अलग नोट्स मिलेंगे जिससे आपको किसी प्रकार की कोंई परेशानी नहीं होगी |<br><br>
-		लेकिन फिर भी आप पुराने वेबसाइट पर जाना चाहते है तो सही पासवर्ड डालने के बाद आप पुराने वेबसाइट पर जा सकते है|
+		इस वेबसाइट को अपडेट किया जा रहा है जो 4th सेमेस्टर की क्लास शुरू होते ही पूरा हो जायेगा | इस अपडेट को इसलिए किया जा रहा है क्योंकि छात्रों को और आसानी से क्लास नोट्स मिल सके, किसी प्रकार की कोंई परेशानी का सामना ना करना पड़े और इस अपडेट के बाद आपको अलग-अलग महीनो के अलग-अलग नोट्स मिलेंगे जिससे आपको किसी प्रकार की कोंई परेशानी नहीं होगी |<br><br>
+		लेकिन फिर भी आप पुराने वेबसाइट पर जाना चाहते है तो बॉक्स के अंदर "Yes" लिखे  आप पुराने वेबसाइट पर जा सकते है|
 	</h1>
 	<br>
 	<div id="box">
@@ -94,7 +94,7 @@
 		{
 			var	pass = document.getElementById("pass").value;
 		var	btn = document.getElementById("btn");
-			if(pass=="Password")
+			if(pass=="Yes")
 			{
 				btn.style.display="block";
 			}
